themes/base-Simple.css
/* ... */
@font-face{
	font-family: fallbackFont;
	src: url("/fonts/noto.ttf");
}
@font-face{
	font-family: fallbackFont2;
	src: url("/fonts/notomono.ttf");
}
@font-face{
	font-family: font2webGlyph;
	src: url("/fonts/symbola.ttf");
}
button{
	font-family: font2web,fallbackFont,fallbackFont2,font2webGlyph,monospace;
	@supports (-moz-appearance:none){
		font-family: monospace;
		font-family: font2webGlyph;
		font-family: fallbackFont2;
		font-family: fallbackFont;
		font-family: font2web;
	}
}
html{
	font-family: font2web,fallbackFont,fallbackFont2,font2webGlyph,monospace;
	@supports (-moz-appearance:none){
		font-family: monospace;
		font-family: font2webGlyph;
		font-family: fallbackFont2;
		font-family: fallbackFont;
		font-family: font2web;
	}
}
::spelling-error{
	text-decoration: wavy var(--highlightBackground) underline;
	background-color: var(--highlightBackground);
	color: var(--highlightText);
}
::grammar-error{
	text-decoration: wavy var(--highlightBackground) underline;
	background-color: var(--highlightBackground);
	color: var(--highlightText);
}
::selection{
	color: var(--highlightText);
	background: var(--highlightBackground);
	text-shadow: none;
}
::-moz-selection{
	color: var(--highlightText);
	background: var(--highlightBackground);
	text-shadow: none;
}
body{
	background: linear-gradient(to top, var(--glassBackground),transparent);
	margin: 0px;
	min-height: 100%;
}
sup{
	font-size: 0.5rem;
	/*
	display: none;
	*/
}
sup::before {
	content: " ";
}
sup::after {
	content: " ";
}
.simpleSup::before{
	content: "" !important;
}
.simpleSup::after{
	content: "" !important;
}
.tag{
	line-height: 1rem;
	font-size: 1rem;
	display: inline-block;
}
hr{
	visiblity: hidden;
	border-width: 0px;
}
/* fix the scrollbars */
/* MOZILLA SCROLLBAR */
html{
	scrollbar-color: var(--textColor) var(--glassBackground);
	scrollbar-width: auto;
}
/* WEBKIT SCROLLBAR*/
.fortuneText::-webkit-scrollbar{
	width: 0.8rem;
	background: var(--solidBackground);
}
.fortuneText::-webkit-scrollbar-thumb{
	width: 0.8rem;
	background: var(--glassBackground);
	box-shadow: 0px 0px 1rem var(--shadowColor);
	border: 1px var(--textColor) solid;
}
pre::-webkit-scrollbar{
	width: 0.8rem;
	background: var(--solidBackground);
}
pre::-webkit-scrollbar-thumb{
	width: 0.8rem;
	background: var(--glassBackground);
	box-shadow: 0px 0px 1rem var(--shadowColor);
	border: 1px var(--textColor) solid;
}
.listCard::-webkit-scrollbar{
	width: 0.8rem;
	background: var(--solidBackground);
}
.listCard::-webkit-scrollbar-thumb{
	width: 0.8rem;
	background: var(--glassBackground);
	box-shadow: 0px 0px 1rem var(--shadowColor);
	border: 1px var(--textColor) solid;
}
html::-webkit-scrollbar{
	width: 0.8rem;
	background: var(--solidBackground);
}
html::-webkit-scrollbar-thumb{
	width: 0.8rem;
	background: var(--glassBackground);
	box-shadow: 0px 0px 1rem var(--shadowColor);
	border: 1px var(--textColor) solid;
}
.weatherDescription::-webkit-scrollbar{
	width: 0.8rem;
	background: var(--solidBackground);
}
.weatherDescription::-webkit-scrollbar-thumb{
	width: 0.8rem;
	background: var(--glassBackground);
	box-shadow: 0px 0px 1rem var(--shadowColor);
	border: 1px var(--textColor) solid;
}
.channelList::-webkit-scrollbar{
	width: 0.8rem;
	background: var(--solidBackground);
}
.channelList::-webkit-scrollbar-thumb{
	width: 0.8rem;
	background: var(--glassBackground);
	box-shadow: 0px 0px 1rem var(--shadowColor);
	border: 1px var(--textColor) solid;
}
html{
	background-size: 100dvw;
	background: var(--solidBackground);
	background-repeat: repeat;
	background-attachment: fixed;
	text-align: center;
	/* cut the gap on the right of the page */
	/* overflow-x: hidden; */
	margin: 0px;
	padding: 0px;
	word-wrap: break-word;
	color: var(--textColor);
	color-scheme: dark light;
}
img{
	background: var(--staticBackground);
}
.channelLink {
	margin-bottom: 0.05rem;
	text-decoration: none;
	display: flex;
	width: 100%;
	/*
	font-size: 30px;
	text-align: center;
	*/
	text-align: left;
	font-size: 1rem;
	word-wrap: break-word;
	background: var(--glassBackground);
	color: var(--textColor);
	border-size: 0.02rem;
}
.channelLink:hover {
	background: var(--highlightBackground);
	color: var(--highlightText);
}
.indexLink{
	color: var(--textColor);
	display: inline-block;
	padding: 0px !important;
	width: 5rem;
	margin: 2rem;
	vertical-align: top !important;
	border: solid var(--borderColor) 0.3rem;
}
/*
.listCard .showPageEpisode .title{
	display: none;
}
*/
.listCard .indexLink{
	width: 5rem;
}
.listCard .indexLink .indexIcon{
	width: 5rem;
	height: 5rem;
}
.listCard .indexLink .indexTitle{
	display: none;
}
.radioIcon{
	font-weight: bold;
	text-shadow: 2px 2px var(--shadowColor);
	margin-left: auto;
	font-size: 0.9rem;
	float: right;
}
.indexIconLink{
	height: 4rem;
	display: inline-block;
}
.indexIcon{
	background-image: var(--staticBackground);
	width: 5rem;
	height: 5rem;
}
@media (hover: none){
	.indexIcon{
		background-image: none;
	}
}
#channelsDownloadLink{
	padding: 1rem;
	/*
	width: 15rem;
	*/
	display: block;
	width: auto;
	margin: 1rem;
}
marquee{
	text-align: left;
}
h1,h2,h3,h4{
	border-bottom: solid 0.2rem;
	border-top: solid 0.2rem;
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
}
/* */
.titleCard a > h1:first-child{
	border-top: none !important;
}
.titleCard a > h2:first-child{
	border-top: none !important;
}
.titleCard a > h3:first-child{
	border-top: none !important;
}
.titleCard a > h4:first-child{
	border-top: none !important;
}
.inputCard a > h1:first-child{
	border-top: none !important;
}
.inputCard a > h2:first-child{
	border-top: none !important;
}
.inputCard a > h3:first-child{
	border-top: none !important;
}
.inputCard a > h4:first-child{
	border-top: none !important;
}
.settingListCard a > h1:first-child{
	border-top: none !important;
}
.settingListCard a > h2:first-child{
	border-top: none !important;
}
.settingListCard a > h3:first-child{
	border-top: none !important;
}
.settingListCard a > h4:first-child{
	border-top: none !important;
}
/* ... */

